	(Generic_prefix_music_scm): Add rule for it.

	* lily/quote-iterator.cc (Quote_iterator::process): Handle
	`quoted-transposition' property.

	* ly/music-functions-init.ly (transposedCueDuring): New function.

	* scm/define-music-properties.scm (all-music-properties): Updated.

	* Documenation/topdocs/NEWS.itely: Document it.

2006-05-17  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* VERSION (PATCH_LEVEL): release 2.9.5
	
	* Documentation/topdocs/INSTALL.texi (Top): update versions and
	build instructions. 

	* ly/engraver-init.ly: switch on hairpinToBarline by default.

2006-05-16  Graham Percival  <gpermus@gmail.com>

	* Documentation/user/basic-notation.itely: editing from Dave, thanks!

	* Documentation/user/ various: minor fixes.

2006-05-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* Documentation/topdocs/NEWS.tely (Top): add hairpinToBarline feature.

2006-05-16  Mats Bengtsson  <mabe@drongo.s3.kth.se>

	* Documentation/user/advanced-notation.itely (Instrument names):
	Modified obsolete instruction on how to move instrument names away
	from the staves. Hmm, at second thought the bug probably has been
	solved, so the full bug description should probably be removed.

2006-05-16  Han-Wen Nienhuys  <hanwen@lilypond.org>

	* lily/dynamic-engraver.cc (typeset_all): hang ending on
	currentCommandColumn. 

	* lily/hairpin.cc (print): also add padding for non-neighbor
	hairpin bounds.

	* scm/define-context-properties.scm
	(all-user-translation-properties): add hairpinToBarline

	* input/regression/hairpin-to-barline.ly: new file.

	* lily/context.cc (internal_send_stream_event): thinko fix.

	* lily/tie.cc (set_default_control_points): robustness fix.

	* python/musicxml.py (Part.interpret): don't complain about
	incomplete measures.

	* scripts/musicxml2ly.py (musicxml_voice_to_lily_voice): only add
	new music if last_event_chord() returned None.

	* python/musicxml.py (Part.interpret): skip back over chord notes.

2006-05-16  Erik Sandberg  <mandolaerik@gmail.com>